--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -1,4 +1,4 @@
-<%- include('../public/_header.html') %>
+<%- include('./partials/_header.ejs') %>
 <section class="hero">
   <h1>Free Online Calculators & Converters for Every Need</h1>
   <p class="tagline"><%= site.tagline %></p>
