--- a/templates/tool.ejs
+++ b/templates/tool.ejs
@@ -1,4 +1,4 @@
-<%- include('../public/_header.html') %>
+<%- include('./partials/_header.ejs') %>
 <article class="tool-article">
   <h1><%= tool.name %></h1>
   <p class="tool-desc"><%= tool.description %></p>
@@ -54,4 +54,4 @@
   </script>
 
 </article>
-<%- include('../public/_footer.html') %>
+<%- include('./partials/_footer.ejs') %>
