--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -37,4 +37,4 @@
   <p>Free, fast, and accurate — UnitsTool provides online calculators and converters to help you with day-to-day calculations. From finance to cooking and engineering — find the tool you need and get results instantly.</p>
 </section>
 
-<%- include('../public/_footer.html') %>
+<%- include('./partials/_footer.ejs') %>
