Update header and footer includes in tool.ejs

--- a/templates/tool.ejs
+++ b/templates/tool.ejs
@@ -1,4 +1,4 @@
-<%- include('./partials/_header.ejs') %>
+<%- include('../partials/_header.ejs') %>
 <article class="tool-article">
   <h1><%= tool.name %></h1>
   <p class="tool-desc"><%= tool.description %></p>
@@ -54,4 +54,4 @@
   </script>
 
 </article>
-<%- include('./partials/_footer.ejs') %>
+<%- include('../partials/_footer.ejs') %>
