--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -1,4 +1,4 @@
-<%- include('../public/_header.html') %>
+<%- include('../public/_header.ejs') %>
 <section class="blog-list">
   <h1>Blog</h1>
   <% posts.forEach(function(p){ %>
@@ -9,4 +9,4 @@
     </article>
   <% }) %>
 </section>
-<%- include('../public/_footer.html') %>
+<%- include('../public/_footer.ejs') %>
