--- a/templates/post.ejs
+++ b/templates/post.ejs
@@ -1,7 +1,7 @@
-<%- include('../public/_header.html') %>
+<%- include('../public/_header.ejs') %>
 <article class="post">
   <h1><%= post.title %></h1>
   <p class="meta">Published <%= post.date %></p>
   <div class="post-content"><%- post.html %></div>
 </article>
-<%- include('../public/_footer.html') %>
+<%- include('../public/_footer.ejs') %>
